# data-science-level-up

./: .gitignore  README.md  aggregate_ordinal_values.py  analyse.py  bi.py  compare_predictions.py  data.py  dataset_info.md  fields.txt  lightgbm_model.py  main.py  multilayer_perceptron.py  nn1.py  pyproject.toml  stats.py  test.py  xgb_clean.py  xgb_process.py  xgb_train.py
catboost/: catboost_model.py
decision_tree/: tree.py
ensemble/: advanced_ensemble.py  calibration_ensemble.py  enhanced_features.py  ensemble_combine.py  full.py  optimized_ensemble.py  train_ensemble_optimizer.py
ensemble/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
ensemble/catboost_info/learn/: events.out.tfevents
ensemble/catboost_info/test/: events.out.tfevents
ensemble/catboost_info/tmp/: cat_feature_index.ab56235c-5adb3a7e-3e02e4ca-41ea59ae.tmp
lightgbm_model/: data_visualization.py  lightgbm_model.py
lightgbm_tuned/: lightgbm_advanced.py  lightgbm_complete.py  lightgbm_enhanced.py  lightgbm_improved.py
multilayer_perceptron/: neural_network.py  test.py  view_data.py
xgboost_b/: xgboost_b.py
