[project]
name = "dslu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub>=0.2.9",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pip>=25.0.1",
    "scikit-learn>=1.3.2",
    "torch>=2.5.1",
    "xgboost>=2.1.4",
    "catboost>=1.2.8",
    "imblearn>=0.0",
]
