[project]
name = "dslu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "deap>=1.4.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kagglehub>=0.2.9",
    "lightgbm>=4.6.0",
    "matplotlib>=3.7.5",
    "notebook>=7.3.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pip>=25.0.1",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "xgboost>=2.1.4",
]
